docs: atualização do Manual de Instalação